--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html style="font-size: 16px;" lang="en"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="Created With ❤️ At Parcoil Inc">
+    <meta name="keywords" content="Created With❤️ At Parcoil Inc">
     <meta name="description" content="">
     <title>Home</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
@@ -1239,11 +1239,21 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
             <input type="hidden" name="business" value="SAC7JJU5Q7ZRS">
             <input type="hidden" name="no_recurring" value="0">
             <input type="hidden" name="currency_code" value="USD">
-            <input type="image" src="https://www.google.com/search?gs_lcrp=EgZjaHJvbWUyBggAEEUYOdIBCTIxOTA4ajBqN6gCALACAA&ie=UTF-8&oq=felix+is+the+best+trust+me+no+cap.+If+you+insult+me+I+will+password+lock&q=felix+is+the+best+trust+me+no+cap.+If+you+insult+me+I+will+password+lock" border="0" name="submit" title="Thank Felix!" alt="???">
+            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button">
             <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
           </form>
         </div>
       </div></footer>
+<span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; background-image: none; right: 20px; bottom: 20px; padding: 0px;" class="u-back-to-top u-file-icon u-icon u-icon-circle u-opacity u-opacity-85 u-palette-1-base" data-href="#"><img src="images/892692.png" alt=""></span>
+  <section class="u-align-center u-black u-clearfix u-container-style u-dialog-block u-opacity u-opacity-65 u-valign-middle u-dialog-section-10" id="carousel_73c0" data-dialog-show-on="timer" data-dialog-show-interval="1000" data-dialog-show-on-list="88446313">
+      <div class="u-align-center u-black u-border-2 u-border-custom-color-4 u-container-style u-dialog u-radius-8 u-shape-round u-dialog-1">
+        <div class="u-container-layout u-container-layout-1">
+          <h2 class="u-align-center u-custom-font u-font-montserrat u-text u-text-custom-color-4 u-text-default u-text-1">This is the last update for 1.0</h2>
+          <h2 class="u-align-center u-custom-font u-font-montserrat u-text u-text-custom-color-4 u-text-default u-text-2">The New Beta is here</h2>
+          <p class="u-align-center u-text u-text-default u-text-3">Try The Beta, This Native is going away soon</p>
+          <a href="https://beta.nativegames.net" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-4 u-hover-custom-color-5 u-radius-3 u-text-body-alt-color u-text-hover-white u-btn-1">Try</a>
+        </div><button class="u-dialog-close-button u-icon u-text-body-alt-color u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 413.348 413.348" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-cdad"></use></svg><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 413.348 413.348" id="svg-cdad"><path d="m413.348 24.354-24.354-24.354-182.32 182.32-182.32-182.32-24.354 24.354 182.32 182.32-182.32 182.32 24.354 24.354 182.32-182.32 182.32 182.32 24.354-24.354-182.32-182.32z"></path></svg></button>
+      </div>
     </section><style>.u-dialog-section-10 .u-dialog-1 {
   width: 566px;
   min-height: 434px;
